# Agentica

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/app/routes/: tickets.py
backend/tests/: test_tickets.py
frontend/: index.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: TicketDetail.tsx  TicketList.tsx
